[project]
name = "crosscoder-through-time"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitsvis>=1.41.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.26.2",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.34",
    "matplotlib>=3.9.2",
    "sae-lens>=4.4.0",
    "torch>=2.5.1",
    "transformer-lens>=1.19.0",
    "transformers>=4.46.2",
]
